--- a/bjs/07_Number_and_string/style.css
+++ b/bjs/07_Number_and_string/style.css
@@ -1,9 +1,13 @@
 .calc-row {
     height: 100vh;
     font-family: 'Share Tech Mono', monospace;
+    
 }
-
 .input-window {
     text-align: end;
     font-size: x-large;
+}
+
+col.id {
+    color: indigo;
 }
